Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10357

ll_ioc_copy_{start,end}() depend on search_inode_for_lustre() which is bad

XMLWordPrintable

    • 3
    • 9223372036854775807

      In the HSM archive cases of ll_ioc_copy_{start,end}() we depend on search_inode_for_lustre() to get the data version. search_inode_for_lustre() does a MDS_GETATTR using the FID and returns a only partially initialized inode. The CT will later open and fstat the file so we have extra 3 RPCs (getattr, enqueue for layout for data version, enqueue for stat). If the CT would open the file to be archived before the the start ioctl and close it after the end ioctl then we could skip the extra 3 RPCs and just send 1 open.

            jhammond John Hammond
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: